# rainmeter-python-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  OLDmain.cpp  OLDmain.txt  TODO.txt  debug_deploy.py  deploy.py  mcppt-toolchain.cmake  mcppt_settings.json  mct_project_info.json  mct_user_settings.json  mct_user_toolchain.cmake  rainmeter-python-plugin_project-workspace.code-workspace  vcpkg-lists.json
assets/loose/PythonHome/: python.cat
assets/loose/v0.1/: measure_host.py  sp_child.py
assets/loose/v0.1/PythonHome/: python39._pth
assets/loose/v0.1/PythonLoaderScripts/: install_pip.py
assets/loose/v0.1/PythonLoaderUtils/: common.py  meaure_type.py  rm_stub.py  stdhandler.py
src/cpp/: CMakeLists.txt  ManagePython.cpp  ManagePython.h  PyRainmeter.cpp  PyRainmeter.h  main.cpp  main.h  sp_main.cpp  sp_main.h  utils.cpp  utils.h
src/cpp/RmPype/: CMakeLists.txt  RmPypeMain.cpp  RmPypeModule.cpp  RmPypeModule.h  RmPypeObject.cpp  RmPypeObject.h
src/cpp/unused/: ManageSP.cpp  ManageSP.h
src/py/: PyPluginSetup.bat  install_pip.bat  measure_host.py  module_viewer.py  python_loader.py  sp_child.py  sp_host.py  subinterp.py
src/py/PythonLoaderScripts/: install_pip.py  module_info_setup.py
src/py/PythonLoaderUtils/: anon_func.py  json_class.py  load_module_helper.py  meaure_type.py  module_handler.py  module_info.py  monitor_types.py  pip_handler.py  rm_sp_child.py  rm_stub.py  stdhandler.py  watchdog_timer.py  win_pipe.py
src/py/unused/: measure_subprocess.py  module_viewer.py
src/rainmeter/PythonPluginTestSkins/@Resources/py/: mod_info.json
src/rainmeter/PythonPluginTestSkins/Base/: mod_info.json
src/rainmeter/PythonPluginTestSkins/Base/T1/: PyTest1.ini
src/rainmeter/PythonPluginTestSkins/Base/T2/: PyTest2.ini
src/rainmeter/PythonPluginTestSkins/Base/mod/: __init__.py  test_mod.py
src/rainmeter/PythonPluginTestSkins/Other/: PyTest_EXT.ini  other.py
(+1 files in other folders)
